[package]
name = "beetlejuice"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
reqwest = { version = "0.12.8", features = ["json"] }
serenity = { version = "0.12.3", features = ["cache"] }
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
